<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTaskTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
